rename several fields
